ejemplo de conflictos

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,11 @@
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
     <div class="container mt-3">
+    asdasd3123
       <%= yield %>
+      dasdas
+      dasd
+      dasdas
     </div>
   </body>
 </html>
