--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,8 @@
     <div class="container mt-3">
       <%= yield %>
     </div>
+    <div>
+    <%= render 'shared/footer' %>
+    </div>
   </body>
 </html>
