--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,18 +8,57 @@
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
+    <div class="row">
+      <div class="col">
+        <%= f.input :name,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "name" } %>
+      </div>
+      <div class="col">
+    <%= f.input :last_name,
                 required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+                autofocus: true,
+                input_html: { autocomplete: "last_name" } %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <%= f.input :id_number,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "id_number" } %>
+      </div>
+      <div class="col">
+        <%= f.input :phone,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "phone" } %>
+      </div>
+      <div class="col">
+        <%= f.input :birthdate,
+           required: true,
+           autofocus: true %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <%= f.input :password,
+                    required: true,
+                    hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                    input_html: { autocomplete: "new-password" } %>
+      </div>
+      <div class="col">
+        <%= f.input :password_confirmation,
+                    required: true,
+                    input_html: { autocomplete: "new-password" } %>
+      </div>
+    </div>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Sign up", class: "btn btn-danger" %>
   </div>
 <% end %>
-
+<br>
 <%= render "devise/shared/links" %>
