solucionando margin y padding banner y footer

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,17 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<%= render 'components/banner' %>
+<div class="container mt-3">
+  <div class="cards">
+    <div class="card">
+    hola
+    </div>
+    <div class="card">
+    hola
+    </div>
+    <div class="card">
+    hola
+    </div>
+    <div class="card">
+    hola
+    </div>
+  </div>
+</div>
