--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,7 +7,7 @@
     padding: 0px 50px;
     color: rgba(0,0,0,0.3);
     width: 100%;
-    position: absolute;
+    position: relative;
     bottom: 0;
   }
   .footer-links {
