--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,11 @@
 // Specific CSS for your home-page
+.cards {
+  display:flex;
+}
+
+.card {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  background-color: lightcoral;
+}
