--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
-<h2>Sign up</h2>
-
+<div class="mx-auto my-3" style="width: 600px;">
+<h2 class='text-center'>Registrate</h2>
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
@@ -21,14 +21,14 @@
                 autofocus: true,
                 input_html: { autocomplete: "last_name" } %>
       </div>
-    </div>
-    <div class="row">
       <div class="col">
         <%= f.input :id_number,
                     required: true,
                     autofocus: true,
                     input_html: { autocomplete: "id_number" } %>
       </div>
+    </div>
+    <div class="row">
       <div class="col">
         <%= f.input :phone,
                     required: true,
@@ -56,9 +56,11 @@
     </div>
   </div>
 
-  <div class="form-actions">
+  <div class="form-actions text-center">
     <%= f.button :submit, "Sign up", class: "btn btn-danger" %>
   </div>
 <% end %>
 <br>
+
 <%= render "devise/shared/links" %>
+</div>
