--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,4 +1,4 @@
-.footer {
+footer {
     background: #CD171A;
     display: flex;
     align-items: center;
@@ -31,5 +31,5 @@
   }
 
   .logo-footer img {
-      height: 30px;
+      height: 21px;
   }
