--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer">
+<footer class="footer">
   <div class="logo-footer">
     <%= image_tag "logo.webp", alt: "logo" %>
   </div>
@@ -10,4 +10,4 @@
     <a href="https://www.facebook.com/AviorAirlines/"><i class="fab fa-facebook"></i></a>
     <a href="https://twitter.com/aviorairlines/"><i class="fab fa-twitter"></i></a>
   </div>
-</div>
+</footer>
