cards layout homee page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,35 @@
 <%= render 'components/banner' %>
 
 <div class="container mt-3">
+  <div class="card-info">
+    <button class="btn">Destinos nacionales</button> |
+    <button class="btn">Destinos internacionales</button>
+  </div>
   <div class="cards">
+  <a href="#">
     <div class="card">
-    hola
+      <%= image_tag('panama.jpg') %>
+      <div class="card-text">Panama</div>
     </div>
+  </a>
+  <a href="#">
     <div class="card">
-    hola
+      <%= image_tag('panama.jpg') %>
+      <div class="card-text">Panama</div>
     </div>
+  </a>
+  <a href="#">
     <div class="card">
-    hola
+      <%= image_tag('panama.jpg') %>
+      <div class="card-text">Panama</div>
     </div>
+  </a>
+  <a href="#">
     <div class="card">
-    hola
+      <%= image_tag('panama.jpg') %>
+      <div class="card-text">Panama</div>
     </div>
+  </a>
+
   </div>
 </div>
