--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="mx-auto my-3" style="width: 600px;">
+<div class="mx-auto py-3 container col-6">
 <h2 class='text-center'>Registrate</h2>
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
