--- a/app/assets/stylesheets/pages/_rate.scss
+++ b/app/assets/stylesheets/pages/_rate.scss
@@ -1,9 +1,17 @@
 .banner-rate {
     background-size: cover;
     background-position: center;
-    padding: 150px 0;
-  }
+    padding: 235px 0;
+}
+
+.container-rate{
+    align-items: center;
+}
 
 .baggage {
-    
+  width: 350px;
+}
+
+.baggage img{
+    width: 450px;
 }
