--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,8 @@
 <footer class="footer">
   <div class="logo-footer">
-    <%= image_tag "logo.webp", alt: "logo" %>
+    <%= link_to root_path do %>  
+      <%= image_tag "logo.webp" %>
+    <% end %>
   </div>
   <div class="footer-links">
   <div class="footer-copyright">
