--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,15 +1,15 @@
 <footer class="footer">
   <div class="logo-footer">
-    <%= link_to root_path do %>  
+    <%= link_to root_path do %>
       <%= image_tag "logo.webp" %>
     <% end %>
   </div>
   <div class="footer-links">
-  <div class="footer-copyright">
-    Avior Airlines C.A | 0501-AVIOR-00 (0501-28467-00)
-  </div>
-    <a href="https://www.instagram.com/aviorair/"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.facebook.com/AviorAirlines/"><i class="fab fa-facebook"></i></a>
-    <a href="https://twitter.com/aviorairlines/"><i class="fab fa-twitter"></i></a>
+    <div class="footer-copyright">
+      Avior Airlines C.A | 0501-AVIOR-00 (0501-28467-00)
+    </div>
+    <a href="https://www.instagram.com/aviorair/" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/AviorAirlines/" target="_blank"><i class="fab fa-facebook"></i></a>
+    <a href="https://twitter.com/aviorairlines/" target="_blank"><i class="fab fa-twitter"></i></a>
   </div>
 </footer>
