--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,11 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <%= link_to "Booking", "#", class: "nav-link" %>
+        <% if user_signed_in? %>
+          <%= link_to "Booking", bookings_path, class: "nav-link" %>
+        <% else %>
+          <%= link_to "Booking", new_user_session_path, class: "nav-link" %>
+        <% end %>
       </li>
       <li class="nav-item">
         <%= link_to "Tarifas", rates_path, class: "nav-link" %>
@@ -18,12 +22,12 @@
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Perfil", edit_user_registration_path, class: "dropdown-item" %>
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+            <%= link_to "Cerrar sesión", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          <%= link_to "Inicia sesión", new_user_session_path, class: "nav-link" %>
         </li>
       <% end %>
     </ul>
