--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -4,6 +4,6 @@
 <%= simple_form_for [@offer, @booking] do |f|   %>
     <%= f.input :date %>
     <%= f.association :rate %>
-    <%= f.association :offer %>
+    <%= f.association :offer, label_method: :cost, value_method: :id, include_blank: false %>
     <%= f.submit "Crear Booking", class: "btn btn-primary" %>
   <% end %>
