--- a/app/views/components/_banner.html.erb
+++ b/app/views/components/_banner.html.erb
@@ -1,6 +1,6 @@
 <div class="banner" >
   <div class="container">
     <h2>Descubre los mejores destinos a tu ciudad favorita!</h2>
-    <%= link_to "Escoge tu destino", new_booking_path, class: 'btn btn-danger' %>
+    <%= link_to "Escoge tu destino", offers_path, class: 'btn btn-danger' %>
   </div>
 </div>
