--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,17 +1,19 @@
 <%= render 'components/banner' %>
 <div class="container mt-3">
-  <div class="card-info">
-    <button class="btn">Destinos nacionales</button> |
-    <button class="btn">Destinos internacionales</button>
+  <h2>Nuestras mejores ofertas</h2>
+  <div class="row">
+    <% @offers.each do |offer| %>
+      <% state = State.find(offer.state_id) %>
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 m-2" data-aos="zoom-in">
+        <div class="card bg-dark text-white">
+          <%= link_to offer do %>
+            <%= image_tag('panama.jpg', class:"card-img") %>
+            <div class="card-img-overlay text-center">
+              <h2 class="card-text-home"><%= state.name %></h2>
+            </div>
+          <% end  %>
+        </div>
+      </div>
+    <% end %>
   </div>
-    <div class="cards">
-      <% @states.each do |state| %>
-        <a href="#">
-          <div class="card">
-            <%= image_tag('panama.jpg') %>
-            <h2 class="card-text"><%= state.name %></h2>
-          </div>
-        </a>
-      <% end %>
-    </div>
 </div>
