--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -12,8 +12,8 @@
         <div class="card" style="width: 18rem;">
           <%= link_to image_tag('https://images.unsplash.com/photo-1550435913-3f0d9ac998fe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80', class:"card-img-top"), offer %>
           <div class="card-body">
-            <h2 class="card-text offer-text"><%= country.name %></h2>
-            <p class="card-text offer-text"> <strong>Estado:</strong> <%= state.name %></p>
+            <h2 class="card-text offer-text"><%= state.name %></h2>
+            <p class="card-text offer-text"> <strong>Pais:</strong> <%= country.name %></p>
             <p class="card-text offer-text"> <strong>Cost:</strong> <%= offer.cost %>$</p>
             <p class="card-text offer-text"> <strong>Fecha:</strong> <%= offer.date %></p>
             <p class="card-text offer-text"> <strong>Capacidad:</strong> Disponible</p>
