--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -2,30 +2,40 @@
   <h2><%= @country.name %></h2>
 </div>
 <div class="container mt-5 mb-5">
-  <h2>Información del vuelo</h2>
   <div class="row">
-    <div class="col">
-      <h4>Pais:</h4>
-      <p><%= @country.name %></p>
+    <div class="col-md-12 col-lg-6">
+      <h2>Información del vuelo</h2>
+      <div class="row">
+        <div class="col">
+          <h4>Pais:</h4>
+          <p><%= @country.name %></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h4>Estado:</h4>
+          <p><%= @state.name %></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h4>Costo:</h4>
+          <p><%= @offer.cost %>$</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h4>Fecha:</h4>
+          <p><%= @offer.date %></p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-12 col-lg-6">
+      <div id="map"
+     style="width: 100%; height: 400px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
     </div>
   </div>
-  <div class="row">
-    <div class="col">
-      <h4>Estado:</h4>
-      <p><%= @state.name %></p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      <h4>Costo:</h4>
-      <p><%= @offer.cost %></p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      <h4>Fecha:</h4>
-      <p><%= @offer.date %></p>
-    </div>
-  </div>
-  <%= link_to "Reservar Vuelo", new_booking_path, class: "btn btn-primary mt-3" %>
+  <%= link_to "Reservar Vuelo", bookings_path, class: "btn btn-primary mt-3" %>
   <%= link_to 'Back', offers_path %>
