--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,4 @@
-.card {
+.card-home {
   width: 282px;
   height: 282px;
   border-radius: 10px;
@@ -6,19 +6,21 @@
   margin: 15px;
 }
 
-.card a .card-img{
+.card-home a .card-img{
   border-radius: 10px;
   transform-origin: 50% 65%;
   transition: transform 1.2s;
   filter: brightness(120%);
 }
 
-.card a:hover .card-img {
+.card-home a:hover .card-img {
   filter: brightness(120%);
   transform: scale(1.3);
 }
 
 .card-text-home {
+  padding-left: 45px;
+  padding-top: 25px;
   color: white;
   font-weight: 500;
   font-size: 25px;
