--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,13 +1,28 @@
-<div class="container my-2">
-<h2>Lista de Bookings</h2>
+<div class="container my-4">
+<h2>Tus Bookings</h2>
 
-<% @bookings.each do |booky| %>
-<ul class="list-group list-group-flush">
-<li class="list-group-item"><%= booky.user.name %></li>
-<li class="list-group-item"><%= booky.rate.name %></li>
-<li class="list-group-item"><%= booky.offer.cost %></li>
-<li class="list-group-item"><%= booky.date %></li>
-</ul>
-
+<% @user_bookings.each do |booky| %>
+  <%state = State.find(booky.offer.state_id)%>
+  <%country = Countrie.find(state.countrie_id)%>
+<div class="card my-4">
+  <div class="card-header">
+    <h4><%= booky.user.name.capitalize %></h4>
+  </div>
+  <div class="card-body">
+    <blockquote class="blockquote mb-0">
+    <%costo_vuelo = booky.offer.cost%>  
+    <%costo_tarifa = booky.rate.cost%> 
+    <%total_costo = costo_tarifa + costo_vuelo%>
+      <p style="font-size:18px;">Destino: <%=country.name%>, <%= state.name %></p>
+      <p style="font-size:18px;">Fecha del vuelo: <%= booky.date %></p>
+      <p style="font-size:18px;">Tarifa elegida: <%= booky.rate.name %></p>
+      <p style="font-size:18px;">Costo de tarifa: <%= booky.rate.cost %>$</p>
+      <p style="font-size:18px;">Costo del vuelo: <span> <%= booky.offer.cost %>$</span></p>
+      <p style="font-size:18px;">Costo total: <span style="color:limegreen;"> <%= total_costo %>$</span></p>
+    </blockquote>
+  </div>
+</div>
 <% end %>
+
+
 </div>
