back button user edit

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -52,5 +52,5 @@
             }, method: :delete %>
         </p> -->
 
-        <%= link_to "Back" , :back %>
+        <%= link_to " Back", :back, class: "fas fa-arrow-left"%>
 </div>
