--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -32,6 +32,18 @@
             <p><%= @offer.date %></p>
           </div>
         </div>
+        <div class="row">
+          <div class="col">
+            <h4>Seleccione su fecha de salida:</h4>
+            <%= b.input :fec_ini, as: :string, required: false, label: false, input_html: {class: "datepicker"} %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <h4>Seleccione su fecha de retorno:</h4>
+            <%= b.input :fec_end, as: :string, required: false, label: false, input_html: {class: "datepicker"} %>
+          </div>
+        </div>
         <h4>Tarifas:</h4>
         <%= b.input :rate_id, collection: @rates, label: false %>
         <div class="form-actions">
