--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,6 +8,9 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
+        <span class="navbar-text">Hola ¡<%= current_user.name %>! </span>
+      </li>
+      <li class="nav-item">
         <%= link_to "Tarifas", rates_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
