--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,15 +8,15 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <span class="navbar-text">Hola ¡<%= current_user.name %>! </span>
-      </li>
-      <li class="nav-item">
         <%= link_to "Tarifas", rates_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
         <%= link_to "Vuelos", offers_path, class: "nav-link" %>
       </li>
       <% if user_signed_in? %>
+      <li class="nav-item">
+        <span class="navbar-text"><%= current_user.name %> <%= current_user.last_name %> </span>
+      </li>
         <li class="nav-item dropdown">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
