nombre de label de busqueda

--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -9,7 +9,7 @@
     <%= text_field_tag :query,
           params[:query],
           class: "form-control",
-          placeholder: "Encuentra tu offer" %>
+          placeholder: "Encuentra tu destino ideal" %>
     <%= submit_tag "Buscar", class: "btn btn-danger" %>
   <% end %>
   <div class="row">
