--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -9,7 +9,7 @@
 
 .banner h2 {
   color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  text-shadow: 1px 1px 3px black;
   font-size: 32px;
   font-weight: 700;
   margin: 30px 0;
