--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,6 +13,12 @@
   filter: brightness(120%);
 }
 
+.card-img{
+  width: 282px;
+  height: 282px;
+  object-fit: cover;
+}
+
 .card-home a:hover .card-img {
   filter: brightness(120%);
   transform: scale(1.3);
@@ -24,4 +30,5 @@
   color: white;
   font-weight: 500;
   font-size: 25px;
+  text-shadow: 1px 1px 2px black;
 }
