--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -10,14 +10,20 @@
       <% country = Countrie.find(state.countrie_id) %>
       <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 m-2" data-aos="zoom-in">
         <div class="card" style="width: 18rem;">
-          <%= link_to image_tag('https://images.unsplash.com/photo-1550435913-3f0d9ac998fe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80', class:"card-img-top"), offer %>
+          <% if offer.photo_url.attached? %>
+            <%= link_to(offer) do %>
+              <%= cl_image_tag offer.photo_url.key, class:"card-img-top" %>
+            <% end %>
+          <% else %>
+            <%= link_to image_tag('https://images.unsplash.com/photo-1550435913-3f0d9ac998fe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80', class:"card-img-top"), offer %>
+          <% end %>
           <div class="card-body">
             <h2 class="card-text offer-text"><%= state.name %></h2>
             <p class="card-text offer-text"> <strong>Pais:</strong> <%= country.name %></p>
             <p class="card-text offer-text"> <strong>Cost:</strong> <%= offer.cost %>$</p>
             <p class="card-text offer-text"> <strong>Fecha:</strong> <%= offer.date %></p>
             <p class="card-text offer-text"> <strong>Capacidad:</strong> Disponible</p>
-            <%= link_to "Más Información...", offer, class: "btn btn-primary mt-3" %>
+            <%= link_to "Más Información...", offer, class: "btn btn-danger mt-3" %>
           </div>
         </div>
       </div>
