--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,11 +6,20 @@
       <% state = State.find(offer.state_id) %>
       <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 m-2" data-aos="zoom-in">
         <div class="card-home bg-dark text-white">
-          <%= link_to offer do %>
-            <%= image_tag('panama.jpg', class:"card-img") %>
-            <div class="card-img-overlay text-center">
-              <h2 class="card-text-home"><%= state.name %></h2>
-            </div>
+          <% if offer.photo_url.attached? %>
+            <%= link_to offer do %>
+              <%= cl_image_tag offer.photo_url.key, class:"card-img" %>
+              <div class="card-img-overlay text-center">
+                <h2 class="card-text-home"><%= state.name %></h2>
+              </div>
+            <% end  %>
+          <% else %>
+            <%= link_to offer do %>
+              <%= image_tag('panama.jpg', class:"card-img") %>
+              <div class="card-img-overlay text-center">
+                <h2 class="card-text-home"><%= state.name %></h2>
+              </div>
+            <% end  %>
           <% end  %>
         </div>
       </div>
