--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,3 +14,11 @@
 .nav-item{
   padding-right: 30px;
 }
+
+.navbar-home{
+	position: fixed;
+  width: 100%;
+	top: 0;
+  z-index: 1;
+  background-color: #343a40b8 !important;
+}
