--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,9 +1,11 @@
-<h1>Edita tu reserva</h1>
-<p>Ingresa los datos que vas a modificar</p>
-<%= simple_form_for [@booking] do |f| %>
-    <%= f.association :rate, label: "Tarifas" %>
-    <%= f.association :offer, label: "Ofertas" %>
-    <%= f.submit "Editar Booking", class: "btn btn-primary" %>
-  <% end %>
-<br>
-<%= link_to "Volver", booking_path %>
+<div class="main_container">
+  <h1>Edita tu reserva</h1>
+  <p>Ingresa los datos que vas a modificar</p>
+  <%= simple_form_for [@booking] do |f| %>
+      <%= f.association :rate, label: "Tarifas" %>
+      <%= f.association :offer, label: "Ofertas" %>
+      <%= f.submit "Editar Booking", class: "btn btn-primary" %>
+    <% end %>
+  <br>
+  <%= link_to "Volver", booking_path %>
+</div>
