--- a/app/views/bookings/update.html.erb
+++ b/app/views/bookings/update.html.erb
@@ -1,2 +1,4 @@
-<h1>Bookings#update</h1>
-<p>Find me in app/views/bookings/update.html.erb</p>
+<div class="main_container">
+  <h1>Bookings#update</h1>
+  <p>Find me in app/views/bookings/update.html.erb</p>
+</div>
