--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,56 +1,58 @@
-<div class="mx-auto py-3 container col-6">
-  <h2 class='text-center'>Edita tu perfil <%= resource_name.to_s.humanize %>
-  </h2>
+<div class="main_container">
+  <div class="mx-auto py-3 container col-6">
+    <h2 class='text-center'>Edita tu perfil <%= resource_name.to_s.humanize %>
+    </h2>
 
-  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-    %>
-    <%= f.error_notification %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+      %>
+      <%= f.error_notification %>
 
-      <div class="form-inputs">
-        <%= f.input :email, required: true, autofocus: true %>
+        <div class="form-inputs">
+          <%= f.input :email, required: true, autofocus: true %>
 
-          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-            <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %>
-            </p>
-            <% end %>
-              <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-6">
-                  <%= f.input :name, required: true, autofocus: true, input_html: { autocomplete: "name" } %>
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+              <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %>
+              </p>
+              <% end %>
+                <div class="row">
+                  <div class="col-sm-12 col-md-12 col-lg-6">
+                    <%= f.input :name, required: true, autofocus: true, input_html: { autocomplete: "name" } %>
+                  </div>
+                  <div class="col-sm-12 col-md-12 col-lg-6">
+                    <%= f.input :last_name, required: true, autofocus: true, input_html: { autocomplete: "last_name" } %>
+                  </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-6">
-                  <%= f.input :last_name, required: true, autofocus: true, input_html: { autocomplete: "last_name" } %>
+                <div class="row">
+                  <div class="col-sm-12 col-md-12 col-lg-6">
+                    <%= f.input :id_number, required: true, autofocus: true, input_html: { autocomplete: "id_number" } %>
+                  </div>
+                  <div class="col-sm-12 col-md-12 col-lg-6">
+                    <%= f.input :phone, required: true, autofocus: true, input_html: { autocomplete: "phone" } %>
+                  </div>
                 </div>
-              </div>
-              <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-6">
-                  <%= f.input :id_number, required: true, autofocus: true, input_html: { autocomplete: "id_number" } %>
+                <div class="row">
+                  <div class="col-sm-12 col-md-12 col-lg-12">
+                    <%= f.input :birthdate, required: true, autofocus: true %>
+                  </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-6">
-                  <%= f.input :phone, required: true, autofocus: true, input_html: { autocomplete: "phone" } %>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-12">
-                  <%= f.input :birthdate, required: true, autofocus: true %>
-                </div>
-              </div>
-              <%= f.input :password, hint: "leave it blank if you don't want to change it" , required: true,
-                input_html: { autocomplete: "new-password" } %>
-                <%= f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password" } %>
-                  <%= f.input :current_password, hint: "Requieres ingresar tu actual password" ,
-                    required: true, input_html: { autocomplete: "current-password" } %>
-      </div>
+                <%= f.input :password, hint: "leave it blank if you don't want to change it" , required: true,
+                  input_html: { autocomplete: "new-password" } %>
+                  <%= f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password" } %>
+                    <%= f.input :current_password, hint: "Requieres ingresar tu actual password" ,
+                      required: true, input_html: { autocomplete: "current-password" } %>
+        </div>
 
-      <div class="form-actions text-center">
-        <%= f.button :submit, "Actualizar Usuario", class: 'btn btn-danger' %>
-      </div>
-      <!-- <% end %>
+        <div class="form-actions text-center">
+          <%= f.button :submit, "Actualizar Usuario", class: 'btn btn-danger' %>
+        </div>
+        <!-- <% end %>
 
-        <h3>Cancel my account</h3>
+          <h3>Cancel my account</h3>
 
-        <p>Unhappy? <%= link_to "Cancel my account" , registration_path(resource_name), data: { confirm: "Are you sure?"
-            }, method: :delete %>
-        </p> -->
+          <p>Unhappy? <%= link_to "Cancel my account" , registration_path(resource_name), data: { confirm: "Are you sure?"
+              }, method: :delete %>
+          </p> -->
 
-        <%= link_to " Back", :back, class: "fas fa-arrow-left"%>
+          <%= link_to " Back", :back, class: "fas fa-arrow-left"%>
+  </div>
 </div>
