--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,76 +1,78 @@
-<div class="mx-auto py-3 container col-6">
-<h2 class='text-center'>Regístrate</h2>
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+<div class="main_container">
+  <div class="mx-auto py-3 container col-6">
+  <h2 class='text-center'>Regístrate</h2>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <div class="row">
-      <div class="col-sm-12 col-md-12 col-lg-6">
-        <%= f.input :name,
-                    required: true,
-                    autofocus: true,
-                    label: "Nombre",
-                    input_html: { autocomplete: "name" } %>
-      </div>
-      <div class="col-sm-12 col-md-12 col-lg-6">
-    <%= f.input :last_name,
-                required: true,
-                autofocus: true,
-                label: "Apellido",
-                input_html: { autocomplete: "last_name" } %>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12 col-md-12 col-lg-6">
-        <%= f.input :id_number,
-                    required: true,
-                    autofocus: true,
-                    label: "Cédula de Identidad",
-                    input_html: { autocomplete: "id_number" } %>
-      </div>
-      <div class="col-sm-12 col-md-12 col-lg-6">
-        <%= f.input :phone,
-                    required: true,
-                    autofocus: true,
-                    label: "Teléfono",
-                    input_html: { autocomplete: "phone" } %>
-      </div>
-    </div>
-    <div class="row">
-
-      <div class="col-12">
-      <%= f.input :birthdate,
+    <div class="form-inputs">
+      <%= f.input :email,
                   required: true,
-                  label: "Fecha de nacimiento",
-                  autofocus: true %>
+                  autofocus: true,
+                  input_html: { autocomplete: "email" }%>
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-6">
+          <%= f.input :name,
+                      required: true,
+                      autofocus: true,
+                      label: "Nombre",
+                      input_html: { autocomplete: "name" } %>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6">
+      <%= f.input :last_name,
+                  required: true,
+                  autofocus: true,
+                  label: "Apellido",
+                  input_html: { autocomplete: "last_name" } %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-6">
+          <%= f.input :id_number,
+                      required: true,
+                      autofocus: true,
+                      label: "Cédula de Identidad",
+                      input_html: { autocomplete: "id_number" } %>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6">
+          <%= f.input :phone,
+                      required: true,
+                      autofocus: true,
+                      label: "Teléfono",
+                      input_html: { autocomplete: "phone" } %>
+        </div>
+      </div>
+      <div class="row">
+
+        <div class="col-12">
+        <%= f.input :birthdate,
+                    required: true,
+                    label: "Fecha de nacimiento",
+                    autofocus: true %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-6">
+          <%= f.input :password,
+                      required: true,
+                      label: "Contraseña",
+                      hint: ("mínimo #{@minimum_password_length} caracteres" if @minimum_password_length),
+                      input_html: { autocomplete: "new-password" } %>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6">
+          <%= f.input :password_confirmation,
+                      required: true,
+                      label: "Confirmar contraseña",
+                      input_html: { autocomplete: "new-password" } %>
+        </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-sm-12 col-md-12 col-lg-6">
-        <%= f.input :password,
-                    required: true,
-                    label: "Contraseña",
-                    hint: ("mínimo #{@minimum_password_length} caracteres" if @minimum_password_length),
-                    input_html: { autocomplete: "new-password" } %>
-      </div>
-      <div class="col-sm-12 col-md-12 col-lg-6">
-        <%= f.input :password_confirmation,
-                    required: true,
-                    label: "Confirmar contraseña",
-                    input_html: { autocomplete: "new-password" } %>
-      </div>
+
+    <div class="form-actions text-center">
+      <%= f.button :submit, "Enviar", class: 'btn btn-danger' %>
     </div>
-  </div>
+  <% end %>
+  <br>
 
-  <div class="form-actions text-center">
-    <%= f.button :submit, "Enviar", class: 'btn btn-danger' %>
+  <%= render "devise/shared/links" %>
   </div>
-<% end %>
-<br>
-
-<%= render "devise/shared/links" %>
 </div>
