--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-dark bg-dark navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-dark bg-dark navbar-lewagon navbar-home">
   <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "logo.webp", class: "img-responsive" %>
   <% end %>
