--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -10,64 +10,66 @@
 
 <%# <div class="offer-banner" style="background-image: url('https://images.unsplash.com/photo-1596120236172-231999844ade?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80')">
   <h2><%= @country.name %><%#</h2></div> %>
-<div class="container mt-5 mb-5">
-  <div class="row">
-    <div class="col-md-12 col-lg-6">
-      <h2>Información del vuelo</h2>
-      <%= simple_form_for [@offer, @booking] do |b| %>
-        <% @rates = Rate.all %>
-        <div class="row">
-          <div class="col">
-            <h4>Pais:</h4>
-            <p><%= @country.name %></p>
-          </div>
+<div class="main_container">
+  <div class="container mt-5 mb-5">
+    <div class="row">
+      <div class="col-md-12 col-lg-6">
+        <h2>Información del vuelo</h2>
+        <%= simple_form_for [@offer, @booking] do |b| %>
+          <% @rates = Rate.all %>
           <div class="row">
             <div class="col">
-              <h4>Estado:</h4>
-              <p><%= @state.name %></p>
+              <h4>Pais:</h4>
+              <p><%= @country.name %></p>
+            </div>
+            <div class="row">
+              <div class="col">
+                <h4>Estado:</h4>
+                <p><%= @state.name %></p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <h4>Costo:</h4>
+                <p><%= @offer.cost %>$</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <h4>Seleccione su fecha de salida:</h4>
+                <%= b.input :fec_ini, as: :string, required: false, label: false, input_html: {class: "datepicker"} %>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <h4>Seleccione su fecha de retorno:</h4>
+                <%= b.input :fec_end, as: :string, required: false, label: false, input_html: {class: "datepicker"} %>
+              </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col">
-              <h4>Costo:</h4>
-              <p><%= @offer.cost %>$</p>
-            </div>
+          <h4>Tarifas:</h4>
+          <%= b.input :rate_id, collection: @rates, label: false %>
+          <div class="form-actions">
+            <%= b.submit "Reservar Vuelo", class: "btn btn-danger" %>
           </div>
-          <div class="row">
-            <div class="col">
-              <h4>Seleccione su fecha de salida:</h4>
-              <%= b.input :fec_ini, as: :string, required: false, label: false, input_html: {class: "datepicker"} %>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col">
-              <h4>Seleccione su fecha de retorno:</h4>
-              <%= b.input :fec_end, as: :string, required: false, label: false, input_html: {class: "datepicker"} %>
-            </div>
-          </div>
-        </div>
-        <h4>Tarifas:</h4>
-        <%= b.input :rate_id, collection: @rates, label: false %>
-        <div class="form-actions">
-          <%= b.submit "Reservar Vuelo", class: "btn btn-danger" %>
-        </div>
-      <% end %>
+        <% end %>
+      </div>
+      <div class="col-md-12 col-lg-6">
+        <div id="map"
+      style="width: 100%; height: 400px;"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+      </div>
+      <br>
+      <%= link_to " Back", offers_path, class: "fas fa-arrow-left"%>
     </div>
-    <div class="col-md-12 col-lg-6">
-      <div id="map"
-     style="width: 100%; height: 400px;"
-     data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+    <div class="form-inputs">
+      <%= link_to 'Volver', offers_path, class: "btn btn-secondary mt-3" %>
+    </div>
+    <div class="form-inputs">
+      <%= link_to 'Editar', edit_offer_path, class: "btn btn-danger mt-3" %>
     </div>
     <br>
     <%= link_to " Back", offers_path, class: "fas fa-arrow-left"%>
   </div>
-  <div class="form-inputs">
-    <%= link_to 'Volver', offers_path, class: "btn btn-secondary mt-3" %>
-  </div>
-  <div class="form-inputs">
-    <%= link_to 'Editar', edit_offer_path, class: "btn btn-danger mt-3" %>
-  </div>
-  <br>
-  <%= link_to " Back", offers_path, class: "fas fa-arrow-left"%>
 </div>
