--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -7,7 +7,6 @@
     <h2><%= @country.name %></h2>
   </div>
 <% end %>
-
 <%# <div class="offer-banner" style="background-image: url('https://images.unsplash.com/photo-1596120236172-231999844ade?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80')">
   <h2><%= @country.name %><%#</h2></div> %>
 <div class="main_container">
@@ -19,38 +18,46 @@
           <% @rates = Rate.all %>
           <div class="row">
             <div class="col">
-              <h4>Pais:</h4>
-              <p><%= @country.name %></p>
+              <p><strong class="offer-show-title">Pais:</strong> <%= @country.name %></p>
             </div>
           </div>
           <div class="row">
             <div class="col">
-              <h4>Estado:</h4>
-              <p><%= @state.name %></p>
+              <p><strong class="offer-show-title">Estado:</strong> <%= @state.name %></p>
             </div>
           </div>
           <div class="row">
             <div class="col">
-              <h4>Costo:</h4>
-              <p><%= @offer.cost %>$</p>
+              <p><strong class="offer-show-title">Costo:</strong> <%= @offer.cost %>$</p>
             </div>
           </div>
           <div class="row">
             <div class="col">
-              <h4>Seleccione su fecha de salida:</h4>
-              <%= b.input :fec_ini, as: :string, required: false, label: false, input_html: {class: "datepicker"} %>
+              <p><strong class="offer-show-title">Asientos Disponibles:</strong> <%= @offer.seats %></p>
             </div>
           </div>
           <div class="row">
             <div class="col">
-              <h4>Seleccione su fecha de retorno:</h4>
-              <%= b.input :fec_end, as: :string, required: false, label: false, input_html: {class: "datepicker"} %>
+              <p class="offer-show-title">Seleccione su fecha de salida:</p>
+              <%= b.input :fec_ini, as: :string, required: false, label: false, required: true, autofocus: true, input_html: {class: "datepicker"} %>
             </div>
           </div>
           <div class="row">
             <div class="col">
-              <h4>Tarifas:</h4>
-              <%= b.input :rate_id, collection: @rates, label: false %>
+              <p class="offer-show-title">Seleccione su fecha de retorno:</p>
+              <%= b.input :fec_end, as: :string, required: false, label: false, required: true, autofocus: true, input_html: {class: "datepicker"} %>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <p class="offer-show-title">Cantidad de Asientos:</p>
+              <%= b.input :seats, collection: 1..@offer.seats, label: false, required: true, autofocus: true %>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <p class="offer-show-title">Tarifas:</p>
+              <%= b.input :rate_id, collection: @rates, label: false, required: true, autofocus: true %>
               <div class="form-actions">
                 <%= b.submit "Reservar Vuelo", class: "btn btn-danger" %>
               </div>
@@ -66,11 +73,8 @@
       </div>
       <br>
     </div>
-    <div class="form-inputs">
-      <%= link_to 'Volver', offers_path, class: "btn btn-secondary mt-3" %>
-    </div>
-    <div class="form-inputs">
-      <%= link_to 'Editar', edit_offer_path, class: "btn btn-danger mt-3" %>
+    <div class="mt-5">
+      <%= link_to 'Volver', offers_path, class: "mt-3" %>
     </div>
   </div>
 </div>
